# facerig

./: .gitignore  CMakeLists.txt  facerig.pro
docs/: README.md
include/: stb_image.h
include/glad/: glad.h
lib/: glad.c
resources/puppets/cartoon/: head.mtl
resources/puppets/female/: female.mtl
resources/puppets/head/: head.mtl
resources/shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  main_nogui.cpp
src/camera/: CMakeLists.txt  camera.cpp  camera.h  main.cpp
src/input_handler/: face_detector.cpp  face_detector.h  input_handler.cpp  input_handler.h  input_stream.cpp  input_stream.h  landmark_detector.cpp  landmark_detector.h  main.cpp
src/input_pipeline/: CMakeLists.txt  camera_resolution.h  input_source.cpp  input_source.h  main.cpp  pipeline.cpp  pipeline.h  webcam.cpp  webcam.h
src/input_pipeline/analyzers/: face_detector.cpp  face_detector.h  face_detector_harr.cpp  face_detector_harr.h  feature_detector.cpp  feature_detector.h  landmark_detector.cpp  landmark_detector.h  landmark_detector_dlib.cpp  landmark_detector_dlib.h
src/input_pipeline/mediators/: mock_mediator.h  pipeline_ui_mediator.h  qt_mediator.cpp  qt_mediator.h
src/mediators/: mock_mediator.cpp  mock_mediator.h  pipeline_qt_mediator.cpp  pipeline_ui_mediator.h
src/render/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  render.cpp  render.h  render_facade.cpp  render_facade.h  shader.cpp  shader.h  window_mock.cpp  window_mock.h
src/render/camera/: camera.h
src/render/model/: mesh.cpp  mesh.h  model.cpp  model.h
src/render/shader/: fragment.glsl  shader.cpp  shader.h
src/render/shader/helper/: fragment_literal.cpp  shader_literal_generator.cpp  vertex_literal.cpp
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  pipeline_runner.cpp  pipeline_runner.h
